@@ -1,3 +1,8 @@
+Sat Jul  8 23:44:57 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/navigation-tree.c:
+	  - Fix quick channel auto-join to support keys. (#347002)
+
 Sat Jul  8 22:39:51 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/fe-gnome.c:
